--- a/03. Remote Data and Authentication - Exercise/03.Students/styles.css
+++ b/03. Remote Data and Authentication - Exercise/03.Students/styles.css
@@ -2,6 +2,11 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
+.container {
+    width: 60%;
+    text-align: center;
+    margin: 0 auto;
+}
 
 table{
     border:1px solid #234465;
@@ -12,7 +17,7 @@ table{
 }
 table th{
     text-decoration: underline;
-    text-align: left;
+    text-align: center;
 }
 table tbody td{
     text-align: left;
@@ -43,46 +48,38 @@ table tbody tr:nth-child(even) button{
 table tr:hover{
     text-decoration: underline;
 }
-
-form {
-    margin: 50px auto 0 auto;
-    width: 70%;
-}
-
-form h3 {
+.button-right {
     text-align: center;
-    text-decoration: underline;
-    text-transform: uppercase;
 }
 
-form input {
-    font-size: 16px;
-    padding: 10px;
-}
-
-form input:not(:last-child) {
-    margin-right: 5px;
-    margin-bottom: 5px;
-}
-
-form button {
-    display: block;
+button {
+    font-size: 25px;
     background-color: #234465;
     color: white;
-    font-size: 20px;
-    margin: 10px 0 5px auto;
-    padding: 5px 90px;
     border-radius: 5px;
+    width: 20%;
+    height: 35%;
+    margin-top: 10px;
 }
 
-.form-group {
-    display: flex;
-    justify-content: space-around;
-    flex-flow: row wrap;
-}
-
-#error {
+button:hover {
     color: red;
-    font-size: 32px;
+    cursor: pointer;
+}
+
+.container-form {
+    padding-top: 25px;
+    font-size: 25px;
     text-align: center;
+}
+.container-form h3{
+    margin: 10px auto;
+    padding: 0;
+}
+.inputs, .labels {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.inputs input {
+    margin: 10px auto;
 }
